--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<index class="html"></index><!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+</head>
+<body>
+   <h1>prima mea pagina web</h1> 
+   <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" srcset="height="500">
+</body>
+</html>
