am reparat imaginea

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    <h1>prima mea pagina web</h1> 
-   <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" srcset="height="500">
+   <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" height="450">
 </body>
 </html>
