imaginea reprezita o papusa

--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" height="450">
 </body>
 </html>
+< img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Maggie_barbie_cosplay.jpg"  alt="o papusa" height="= 300"
