--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
 </head>
+<style>
+.red{
+   color: red
+</style>
 <body>
    <h1>prima mea pagina web</h1> 
    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" height="450">
+   < img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Maggie_barbie_cosplay.jpg"  alt="o papusa" height="= 300"
+<p style="color:red;" >Ceva rosu</p>
+<p style=" ceva rosu;" >Ceva </p>
+<p style=" color red; "> Ceva neobisnuit</p>
+<p class=" red">Ceva inutil</p>
 </body>
 </html>
-< img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Maggie_barbie_cosplay.jpg"  alt="o papusa" height="= 300"
