--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
 .red{
    color: red
 </style>
-<body>
+   .shorty {
+       display: flex;
+       flex directiom: row
+   }
+   .diva {
+      background.color: pink 
+   <style>
+   </head>
+   <body>
    <h1>prima mea pagina web</h1> 
    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Greenland_467_%2835130903436%29_%28cropped%29.jpg" alt=" un caine" height="450">
 <p style="color:red;" >Ceva rosu</p>
 <p style=" ceva rosu;" >Ceva </p>
 <p style=" color red; "> Ceva neobisnuit</p>
 <p class=" red">Ceva inutil</p>
+<div class="shorty"  id="primul"
+
+</div>
+<div class="shorty diva" 
+     <p> cine trece....hahahaha</p>
+
+</div>
 </body>
 </html>
